# nitro

./: .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
ai_context/: benchmark_multicore.md  benchmark_plan.md  benchmark_single_core.md  context_raw_pointer_design.md  inference_server_design.md  pipeline_perf_bottlenecks.md  pump_redis_design.md  scope_raw_pointer_plan.md  session_composition.md
ai_context/inconel/: cross_doc_contracts.md  design_overview.md  flush_and_frontier_switch.md  known_issues.md  on_disk_formats.md  read_api_and_pipeline.md  real_nvme_test_guide.md  recovery_and_wal_reclaim.md  runtime_memory_and_cache.md  runtime_state_machine.md  write_path_and_pipeline.md
ai_context/inconel.codex/: design_overview.md
ai_context/inconel/audit/: core.md  format.md  runtime.md  tree.md  value.md
ai_context/inconel/design_doc/: INDEX.md  code_modules.md  code_quality_standard.md  cross_doc_contracts.md  design_overview.md  flush_and_frontier_switch.md  on_disk_formats.md  read_api_and_pipeline.md  recovery_and_wal_reclaim.md  runtime_memory_and_cache.md  runtime_state_machine.md  write_path_and_pipeline.md
ai_context/inconel/plan/: 001_mock_nvme.md  002_tree_page_data_structure.md  003_tree_lookup_scheduler.md  004_page_cache.md  005_runtime_registry.md  006_value_scheduler.md  007_value_cache_integration.md  008_abseil_container_alignment.md  009_readside_format_core_hardening.md  010_value_persist_cleanup.md  011_scheduler_surface_cleanup.md  012_bounded_advance_fairness.md  013_tree_lookup_single_flight.md  014_tree_page_slot_directory.md  014_tree_page_slot_directory_review.md  015_wal_format_pods.md  016_superblock_pod.md  016_superblock_pod_review.md  017_runtime_format_profile_hardening.md  018_readonly_frame_cache_core.md  018_readonly_frame_cache_core_review.md  019_value_resident_frame_state.md  019_value_resident_frame_state_review.md  020_tree_local_flush_design_sync.md  020_tree_local_flush_design_sync_review.md  021_front_input_memtable_carrier.md  022_flush_runtime_carrier_topology.md  022_flush_runtime_carrier_topology_review.md  023_flush_manifest_round_state.md  023_flush_manifest_round_state_review.md  024_memtable_fold_workset.md  024_memtable_fold_workset_review.md  025_lookup_fanout_leaf_mapping.md  025_lookup_fanout_leaf_mapping_review.md  026A_worker_output_model.md  026A_worker_output_model_review.md  026_candidate_build.md  027_worker_inmemory_tree_proposal.md  027_worker_inmemory_tree_proposal_review.md  029_owner_closure.md  (+45 more)
ai_context/sider/: backpressure.md  benchmark.md  clean_eviction_plan.md  code_review.md  design.md  plan.md  requirements.md  stage1_report.md  stage2_report.md
aisaq/: aisaq_requirements.md  benchmark_report.md  claude-code-best-practices.md  main.cc
aisaq/common/: types.hh
aisaq/index/: index.hh
aisaq/nvme/: init.hh
aisaq/runtime/: config.hh
aisaq/search/: beam_search.hh
apps/aisaq/: README.md  config.json  config_3disk.json  config_3disk_15core.json  config_3disk_r56.json  config_build.json
apps/aisaq/cache/: node_cache.hh  scheduler.hh
apps/aisaq/gpu/: kernels.cu  kernels.hh
apps/aisaq/index/: meta_data.hh  node_accessor.hh
apps/aisaq/nvme/: sector_page.hh
apps/aisaq/pq/: codebook.hh
apps/aisaq/runtime/: config.hh
apps/aisaq/search/: state.hh
apps/aisaq/tools/: convert_index.cc  gen_test_index.cc
apps/inconel/: README.md
apps/inconel/coord/: scheduler.hh  sender.hh
apps/inconel/core/: batch_carrier.hh  checkpoint_guard.hh  clock_cache.hh  data_area_heads.hh  flush_round.hh  leaf_order.hh  memtable.hh  memtable_lookup.hh  owner_callback.hh  page_cache.hh  panic.hh  read_catalog.hh  registry.hh  retired_objects.hh  shard_partition.hh  shard_partition_builder.hh  slru_cache.hh  tree_geometry.hh  tree_manifest.hh  tree_read_domain.hh  tree_reverse_topology.hh  wal_reclaim_frontier.hh  wal_stream.hh
apps/inconel/format/: crc.hh  crc32c.hh  format_options.hh  format_profile.hh  formatted_storage.hh  layout_plan.hh  superblock.hh  superblock_builder.hh  tree_page.hh  types.hh  value_object.hh  wal.hh
apps/inconel/front/: scheduler.hh  sender.hh  wal_append.hh
apps/inconel/memory/: dma_page_pool.hh  frame.hh  spdk_dma_page_allocator.hh
apps/inconel/mock_nvme/: device.hh  scheduler.hh  sender.hh
apps/inconel/nvme/: frame_io.hh  lba_page.hh  real_compile_check.cc  real_device.hh  real_scheduler.hh  runtime_scheduler.hh
apps/inconel/pipeline/: flush_round.hh  maintenance_round.hh  point_get.hh  seal_round.hh
apps/inconel/recovery/: boot.hh  state.hh  sync_io.hh  tree_scanner.hh
apps/inconel/runtime/: builder.hh  config.hh  facade.hh  format_device.hh  maintenance_scheduler.hh  operations.hh  run.hh  session.hh  start.hh  start_db.hh  stats.hh  stop_db.hh
apps/inconel/scripts/: ycsb_consistency.sh
apps/inconel/test/: check.hh  profile_m13.cc  test_candidate_build.cc  test_concurrent_runtime_e2e.cc  test_crc32c.cc  test_flush_carriers.cc  test_flush_e2e.cc  test_flush_round.cc  test_inc046_regression.cc  test_leaf_mapping.cc  test_m01_batch_carrier_memtable.cc  test_m02_read_handle_prs_memtable_lookup.cc  test_m03_coord_scheduler_assign_publish_release.cc  test_m04_wal_space_scheduler.cc  test_m05_front_scheduler_memtable_owner.cc  test_m06_front_wal_append_prepare.cc  test_m07_value_persist_read_adapter.cc  test_m08_write_baseline_inflight.cc  test_m09_production_write_batch.cc  test_m10_point_get_live_read.cc  test_m11_runtime_topology_operations.cc  test_m12_seal_round.cc  test_m13_e2e_matrix.cc  test_m14_wal_group_commit.cc  test_multishard_split_e2e.cc  test_page_cache.cc  test_reclaim.cc  test_recovery_boot_ram_device.cc  test_runtime.cc  test_runtime_topology.cc  test_seal_inflight_race_e2e.cc  test_steady_e2e.cc  test_superblock_format.cc  test_tree_lookup.cc  test_tree_lookup_multicore.cc  test_tree_page_format.cc  test_tree_pipeline_compile.cc  test_tree_value.cc  test_value.cc  test_value_placement_e2e.cc  (+5 more)
apps/kv/: README.md
apps/sider/: README.md  config.hh  main.cc  sider.json  test_store.cc
kv/: README.md  config.json
(+58 files in other folders)
